[package]
name = "numnums"
version = "0.1.0"
edition = "2021"
authors = ["Roland Rodriguez <rrrodzilla@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "Reusable bite-sized zero-copy parsers to feed your nom parser"
documentation = "https://docs.rs/numnums/latest/numnums/"
repository = "https://github.com/rrrodzilla/numnums"
keywords = ["parser", "parsing", "nom", "utility", "text"]
categories = ["data-structures", "development-tools", "parser-implementations", "parsing", "text-processing"]

[dependencies]
nom = { version = "7.1.0", features = ["alloc"] }

[dev-dependencies]
anyhow = "1.0.52"
